# Octane

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  algorithm_rom_generator.py  bugs.md  main.cpp  make_plot.py  requirements.txt  sine_table_generator.py  synth.sublime-project
Vmodules/: CMakeLists.txt  verilate_cmake.py
firmware/: .gitignore  CMakeLists.txt  linker.ld  startup_stm32f407xx.s  toolchain.cmake  vectors.s
firmware/src/: AudioOut.cpp  AudioOut.hpp  CriticalSection.cpp  CriticalSection.hpp  Fpga.cpp  Fpga.hpp  fpga.cpp  fpga.hpp  init.c  init.cpp  init.hpp  isr.cpp  main.c  main.cpp  printf.cpp  start.cpp  vectors.s
firmware_baseline/stm32_test3/: .gitignore  CMakeLists.txt  Makefile  toolchain.cmake
firmware_baseline/stm32_test3/src/: deviceid.hpp  gpio.hpp  init.cpp  main.cpp  stm32f407.hpp  stringio.cpp  stringio.hpp  test.cpp  usart.hpp
hdl/: spi.sv  stage_envelope_attenuator.sv  synth.sv
notes/: filter_test.m  fpga_resource_budget (stalling for taps).md  fpga_resource_budget.md  links.txt
patches/: test1.json  test2.json
roms/: README
rtl/: algorithm_rom.hex  algorithm_rom.sv  core.sv  core.svh  double_register.sv  envelope_generator.sv  filter_value_register_file.sv  multiplier.sv  operator.sv  operator_output_register_file.sv  phase_generator.sv  sine_function.hex  sine_function.sv  spi.sv  stage_envelope_attenuator.sv  stage_filter.sv  stage_modulation.sv  stage_modulator.sv  stage_phase_accumulation.sv  stage_phase_accumulator.sv  stage_sample_generator.sv  stage_waveform_generation.sv  stage_waveform_generator.sv  synth.sv  synth.svh  synth_OLD.sv  voice.sv  waveform_generator.sv
rtl/include/: operator.svh  registers.svh  voice.svh
src/: CMakeLists.txt  PatchConfig.cpp  PatchConfig.hpp  arm_toolchain.cmake  debug.cpp  debug.hpp  main.cpp  server.cpp  server.hpp  synth.cpp  synth.hpp  synth_interface.py  tcp_client_test.py  tcp_server_test.cpp
src/embedded/: CMakeLists.txt
src/embedded/src/: isr.cpp  main.cpp
src/firmware/: CMakeLists.txt
src/firmware/src/: DeviceId.cpp  DeviceId.hpp  Spi.cpp  Spi.hpp  SpiFlash.cpp  SpiFlash.hpp  init.cpp  init.hpp  isr.cpp  isr.hpp  main.cpp  start.cpp
src/hdl/: CMakeLists.txt  stage_phase_accumulator.sv  stage_sample_generator.sv  stage_waveform_generator.sv  synth.sv  synth.svh
src/new_board_firmware/: CMakeLists.txt  linker.ld  toolchain.cmake
src/new_board_firmware/src/: main.cpp  printf.cpp  start.cpp  vectors.s
src/openocd/: stm32f4discovery.cfg
src/platform/: Spi.hpp
src/shared/: CMakeLists.txt
src/simulator/: CMakeLists.txt  Synth.cpp  Synth.hpp  main.cpp
synthesis/: .gitignore  CMakeLists.txt  create_project.tcl  design_constraints.pdc  generate_bitstream.tcl  icestorm.sh  map_design.tcl  octane.pcf  radiant_driver.py  synth.pcf  synth.ys  synthesize_design.tcl
tools/: carrier_comp_table_generator.py  driver.py  make_plot.py  modulator_comp_table_generator.py  sine_rom_generator.py
